--- a/css/stories.css
+++ b/css/stories.css
@@ -16,7 +16,6 @@
   margin: 20px 30px;
 }
 
-
 /* Individual stories */
 
 .story-link {
@@ -36,4 +35,14 @@
 
 .story-user {
   display: block;
+}
+
+ol {
+  list-style: none;
+}
+
+ol li {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
