--- a/css/site.css
+++ b/css/site.css
@@ -29,7 +29,6 @@ a:hover {
   text-decoration: underline;
 }
 
-
 /* Site layout */
 
 /* This is the basic box that the main part of the page goes into */
@@ -43,7 +42,6 @@ a:hover {
 .hidden {
   display: none;
 }
-
 
 /* Forms */
 
@@ -106,7 +104,6 @@ form > hr {
   width: 70px;
 }
 
-
 /* responsive queries for tightening things up for mobile. */
 
 @media screen and (max-width: 576px) {
@@ -120,4 +117,16 @@ form > hr {
     max-width: 900px;
     margin: 8px auto;
   }
+}
+
+ol {
+  list-style: none;
+}
+
+ol li {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.5rem;
+  border-bottom: 2px solid hsl(6, 93%, 71%, 0.25);
 }
