--- a/css/site.css
+++ b/css/site.css
@@ -78,9 +78,9 @@ form input:focus {
   box-shadow: 0 0 4px 1px darkgray;
 }
 
-form > button {
+button {
   width: 4rem;
-  margin: 5px 0 15px 65px;
+  /* margin: 5px 0 15px 65px; */
   border: none;
   border-radius: 4px;
   padding: 8px;
@@ -91,7 +91,7 @@ form > button {
   transition: all 0.15s;
 }
 
-form > button:hover {
+button:hover {
   background-color: dimgray;
 }
 
